# Agentic-Interviewer

backend/: api.py  pyproject.toml
backend/src/projecttest/: crew.py  grading_crew.py  question_crew.py
backend/src/projecttest/config/: analysis_tasks.yaml  grading_tasks.yaml  question_tasks.yaml  tasks.yaml
backend/src/projecttest/tools/: mcp_runner.py
backend/src/projecttest/utils/: pdf_report.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: CodingChallenge.tsx  Questions.tsx  TechSelector.tsx  UploadCV.tsx
frontend/src/services/: api.ts
src/projecttest/: crew.py  grading_crew.py  main.py
src/projecttest/config/: agents.yaml  grading_tasks.yaml  tasks.yaml
src/projecttest/models/: cv_analysis.py
src/projecttest/utils/: file_reader.py  pdf_report.py
